Refactor api server logic and update storage processing routines
